Fixed header issue on page reload + minor spacing change on contact page

--- a/FirebirdFrankieFoundryWebsite/src/app/contact/contact.component.scss
+++ b/FirebirdFrankieFoundryWebsite/src/app/contact/contact.component.scss
@@ -7,6 +7,10 @@
     vertical-align: -10px;
 }
 
+.social-link {
+    color: $ff-turqoise-text;
+}
+
 .ff-form {
     mat-form-field {
         width: 100%;
@@ -20,4 +24,8 @@
 .ff-card {
     display: flex; 
     justify-content: center;
+}
+
+::ng-deep .mat-form-field-wrapper {
+    margin-right: 18px;
 }
