--- a/FirebirdFrankieFoundryWebsite/src/styles.scss
+++ b/FirebirdFrankieFoundryWebsite/src/styles.scss
@@ -47,6 +47,8 @@ $ff-honey: (
   )
 );
 
+$ff-turqoise-text: #2cb5b3;
+
 $ff-turqoise: (
   50: #def2f2,
   100: #acdfde,
